Set Up Repository
Set up all the the file structure for the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-/project/.godot/
-/project/addons/
+/project/client/.godot/
+/project/client/addons/
+/project/server/.godot/
+/project/server/addons/
 /.idea/
